[package]
name = "fractaller"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Shapur <48966182+Shapur1234@users.noreply.github.com>"]
repository = "https://github.com/Shapur1234/Fractaller"

[workspace]
members = [
  "gui",
  "cli"
]

[profile.release]
lto = true

[profile.flamegraph]
inherits = "release"
lto = false
debug = true
panic = "abort"

[dependencies]
cgmath = "0.18"
fontdue = "0.7"
lazy_static = "1.4"
image = { version ="0.24.7", optional = true}
rayon = { version = "1.8", optional = true }
winit = { version =  "0.29", optional = true }
