[package]
name = "fractl-cli"
version = "0.1.0"
edition = "2021"
authors = ["Shapur <48966182+Shapur1234@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Shapur1234/Fractaller"

[dependencies]
lib = { path = "../lib", features = [ "image", "rayon" ] }
cgmath = "0.18"
image = "0.24"
