[package]
name = "fractl_lib"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
multithread = [ "dep:rayon" ]
gpu = [ "dep:bytemuck", "bytemuck/derive", "dep:flume", "dep:pollster", "dep:wgpu" ]
f32 = [ ]
f64 = [ ]
image = [ "dep:image" ]
winit = [ "dep:winit" ]

[dependencies]
cfg-if = "1.0"
cgmath = "0.18"
fontdue = "0.7"
lazy_static = "1.4"
image = { version = "0.24", optional = true }
winit = { version = "0.29", default_features = false, optional = true }
rayon =  { version = "1.8", optional = true }
bytemuck = { version = "1.14", optional = true }
flume = {version = "0.11", optional = true }
pollster = { version =  "0.3", optional = true }
wgpu = { version = "0.18", optional = true }
